fixed map on search so that it doesn't scroll off screen

--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -1,6 +1,8 @@
 #map-container {
   width: 300px;
   height: 350px;
+  position: sticky !important;
+  top: 0px !important;
 }
 
 
@@ -13,4 +15,7 @@ margin-top: 70px;
 .biz-map-index-page {
   margin-top: 80px;
   margin-left: 80px;
+}
+
+.biz-index-map {
 }
